chore: update bounce-quest.html, remove test.md and add template.html

--- a/template/template.html
+++ b/template/template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Privacy Policy for Bounce Quest</title>
+    <title>Privacy Policy for [Game Name]</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,8 +32,8 @@
 </head>
 
 <body>
-    <h1>Privacy Policy for Bounce Quest</h1>
-    <p>Bounce Quest is a game developed and published by Hamza Sari. We are committed to protecting the privacy
+    <h1>Privacy Policy for [Game Name]</h1>
+    <p>[Game Name] is a game developed and published by [Your Company Name]. We are committed to protecting the privacy
         of our players and users. This Privacy Policy explains how we collect, use, and protect personal data in
         connection with our game.</p>
 
@@ -95,10 +95,10 @@
         version of this policy on our website.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at hamza.sari@gmail.com.</p>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at [Your Email Address].</p>
 
     <h2>Effective Date</h2>
-    <p>This Privacy Policy is effective as of 31/12/2024.</p>
+    <p>This Privacy Policy is effective as of [Date].</p>
 </body>
 
 </html>
